--- a/static/style.css
+++ b/static/style.css
@@ -35,6 +35,8 @@ body {
     flex-direction: row;
     justify-content: space-between;
     background: gray;
+    top: 0;
+    z-index: 10;
 }
 
 .navigation .header-links {
@@ -289,10 +291,102 @@ section {
     width: 32px;
 }
 
-.mobile-menu {
+.menu_btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    transition: all .5s ease-in-out;
+    box-sizing: border-box;
+}
+
+.menu_btn .menu_hamburger {
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    border-radius: 1.5px;
+    z-index: 21;
+    transition: all .5s ease;
+}
+
+.menu_hamburger::before,
+.menu_hamburger::after{
+        content: '';
+        position: absolute;
+        width: 25px;
+        height: 3px;
+        background: black;
+        border-radius: 1.5px;
+        transition: all .5s ease;
+}
+
+.menu_hamburger::before{
+    transform: translateY(-9px);
+}
+
+.menu_hamburger::after{
+    transform: translateY(9px);
+}
+
+.menu_items{
+    background:  gray;
+    color: black;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    padding-top: 50px;
+    top: -110%;
+    transition: all .5s ease-in-out;
+    left: 0;
+    z-index: 20;
+    box-shadow: -2px -2px 10px #242323;
+    box-sizing: border-box;
+    padding-left: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.menu_btn input:checked ~.menu_items{
+    top: 0;
+}
+
+.menu_items li{
+    padding: 20px 10px;
+    text-align: center;
+    list-style-type: none;
+    transition: all .2s ease;
+    font-size: 24px;
+    transition: all .2s ease-out;
+}
+
+.menu_items li a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.menu_items li:hover{
+    letter-spacing: 2px;
+    opacity: .6;
+}
+
+.menu_btn input:checked ~.menu_hamburger{
+    transform: translateX(-50px);
+    background: transparent;
+}
+
+.menu_btn input:checked ~.menu_hamburger::before{
+    transform: rotate(45deg) translate(35px, -35px);
+}
+
+.menu_btn input:checked ~.menu_hamburger::after{
+    transform: rotate(-45deg) translate(35px, 35px);
+}
+
+.menu_btn input{
     display: none;
-    margin: 16px;
-    width: 40px;
 }
 
 
