Input form submit

--- a/static/style.css
+++ b/static/style.css
@@ -206,6 +206,7 @@ section {
     box-shadow: 5px 5px 4px #ecd3d3;
     padding: 3px;
     border-radius: 7px;
+    color: #e9e7e7;
 }
 
 .contact {
